--- a/index.html
+++ b/index.html
@@ -9,35 +9,8 @@
 <body>
     <div class="game-wrapper">
         <h1>tic-tac-toe</h1>
-        <div class="game-board">
-          <!--  cell class names like (x,y) coordinates but x-y  -->
-          <div class="cell 1-3">
-            <p class="content"></p>
-          </div>
-          <div class="cell 2-3">
-            <p class="content"></p>
-          </div>
-          <div class="cell 3-3">
-            <p class="content"></p>
-          </div>
-          <div class="cell 2-1">
-            <p class="content"></p>
-          </div>
-          <div class="cell 2-2">
-            <p class="content"></p>
-          </div>
-          <div class="cell 2-3">
-            <p class="content"></p>
-          </div>
-          <div class="cell 1-1">
-            <p class="content"></p>
-          </div>
-          <div class="cell 2-1">
-            <p class="content"></p>
-          </div>
-          <div class="cell 3-1">
-            <p class="content"></p>
-          </div>
+        <div class="game-board" id="game-board">
+
         </div>
       </div>
       <script src="js/main.js"></script>
